// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsFeeds > matches snapshot with feeds 1`] = `
"<section class="set-section">
  <h2>RSS &amp; Podcasts</h2>
  <p class="desc"> Paste a feed URL or a plain website address — Reader will find the feed automatically. </p>
  <!--v-if-->
  <div class="add-feed">
    <div class="field">
      <r-icon-stub name="rss" size="16"></r-icon-stub><input placeholder="https://example.com or https://example.com/feed.xml">
    </div><button class="btn btn-primary">
      <r-icon-stub name="plus" size="16"></r-icon-stub> Add feed
    </button>
  </div>
  <div class="feed-list">
    <div class="feed-row"><span class="feed-ic" style="--c: var(--src-rss);"><r-icon-stub name="rss" size="16"></r-icon-stub></span>
      <div class="feed-info">
        <div class="feed-name">Test Feed</div>
        <div class="feed-url">https://example.com/feed.xml</div>
      </div><button class="icon-btn" title="Remove">
        <r-icon-stub name="trash" size="16"></r-icon-stub>
      </button>
    </div>
    <div class="feed-row"><span class="feed-ic" style="--c: var(--src-podcast);"><r-icon-stub name="mic" size="16"></r-icon-stub></span>
      <div class="feed-info">
        <div class="feed-name">https://podcast.example.com/feed</div>
        <div class="feed-url">https://podcast.example.com/feed</div>
      </div><button class="icon-btn" title="Remove">
        <r-icon-stub name="trash" size="16"></r-icon-stub>
      </button>
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`SettingsFeeds > shows empty state when there are no feeds 1`] = `
"<section class="set-section">
  <h2>RSS &amp; Podcasts</h2>
  <p class="desc"> Paste a feed URL or a plain website address — Reader will find the feed automatically. </p>
  <!--v-if-->
  <div class="add-feed">
    <div class="field">
      <r-icon-stub name="rss" size="16"></r-icon-stub><input placeholder="https://example.com or https://example.com/feed.xml">
    </div><button class="btn btn-primary">
      <r-icon-stub name="plus" size="16"></r-icon-stub> Add feed
    </button>
  </div>
  <div class="feed-list">
    <p class="desc">No feeds added yet.</p>
  </div>
</section>"
`;
